--- a/learn-redis/redis-demo/src/main/resources/application.yml
+++ b/learn-redis/redis-demo/src/main/resources/application.yml
@@ -1,7 +1,7 @@
 # mysql?????
 spring:
   datasource:
-    url: jdbc:mysql://127.0.0.1:3306/testsys?serverTimezone=GMT%2B8
+    url: jdbc:mysql://127.0.0.1:3306/redis?serverTimezone=GMT%2B8
     username: root
     password: root
     driver-class-name: com.mysql.cj.jdbc.Driver
