--- a/learn-docker/dockerfile
+++ b/learn-docker/dockerfile
@@ -1,21 +1,17 @@
 # 基础镜像
 FROM moxm/java:1.8-full
-
 # 作者 联系方式
 MAINTAINER wfh "xxx@163.com"
 
-# 环境变量
-ENV TZ=Asia/Shanghai JAVA_OPTS="-Xms128m -Xmx256m -Djava.security.egd=file:/dev/./urandom"
-
+# 挂载目录
+VOLUME /home/wfh
 # 构建镜像时执行的命令   创建目录，-p 需要时创建上层目录，如目录早已存在则不当作错误
-RUN mkdir -p /docker
-
+RUN mkdir -p /home/wfh
 #定义默认的工作目录
-WORKDIR /docker
+WORKDIR /home/wfh
 
 #用于指定传递给构建运行时的变量
 ARG JAR_FILE=target/learn-docker-0.0.1-SNAPSHOT.jar
-
 #发布到网上时只会把jar包和Dockerfile发布上去
 #将jar包添加到./app.jar容器中
 COPY ${JAR_FILE} /app.jar
@@ -25,8 +21,7 @@ EXPOSE 5918
 
 #入口，可以理解为命令
 ENTRYPOINT ["java","-jar","/app.jar"]
-
+# 环境变量
+ENV TZ=Asia/Shanghai JAVA_OPTS="-Xms128m -Xmx256m -Djava.security.egd=file:/dev/./urandom --server.port=5918"
 #地址映射 CMD容器启动时要执行的命令
-CMD ["--server.port=5918"]
-
-
+CMD $JAVA_OPTS
