--- a/learn-yudao-springboot-labs/lab-03-spring-security-oauth/lab-03-demo01-authorization-server-with-authorization-code/pom.xml
+++ b/learn-yudao-springboot-labs/lab-03-spring-security-oauth/lab-03-demo01-authorization-server-with-authorization-code/pom.xml
@@ -9,10 +9,10 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.example</groupId>
-    <artifactId>lab-03-demo01-authorization-server-with-resource-owner-password-credentials</artifactId>
+    <artifactId>lab-03-demo01-authorization-server-with-authorization-code</artifactId>
     <version>0.0.1-SNAPSHOT</version>
-    <name>lab-03-demo01-authorization-server-with-resource-owner-password-credentials</name>
-    <description>(密码模式)认证、授权服务器</description>
+    <name>lab-03-demo01-authorization-server-with-authorization-code</name>
+    <description>(授权码模式)认证、授权服务器</description>
     <properties>
         <java.version>1.8</java.version>
     </properties>
